--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <title>React App</title>
   </head>
   <body>
-    <h1>yeehaw</h1>
+    <h1>yeehaw mother frickers !</h1>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
