added ryan's name

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <h1>yeehaw mother frickers !</h1>
+    <h2>Hello it's Ryan</h2>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
